# kitty

./: Cargo.toml  LICENSE  README.md
apps/kitty-desktop/: Cargo.toml  README.md
apps/kitty-desktop/src/: lib.rs  main.rs
apps/kitty-shell/: Cargo.toml
apps/kitty-shell/src/: lib.rs  main.rs
apps/kitty-shell/tests/: demo_flow.rs
crates/kitty/: Cargo.toml  README.md
crates/kitty-3d/: Cargo.toml
crates/kitty-3d/src/: camera.rs  lib.rs  mesh.rs  pipeline.rs  scene.rs
crates/kitty-ai/: Cargo.toml
crates/kitty-ai/src/: lib.rs
crates/kitty-compat/: Cargo.toml
crates/kitty-compat/src/: baseline.rs  lib.rs
crates/kitty-core/: Cargo.toml
crates/kitty-core/src/: browser.rs  lib.rs  subsystem.rs
crates/kitty-render/: Cargo.toml
crates/kitty-render/src/: dom.rs  layout.rs  lib.rs  page.rs
crates/kitty-script/: Cargo.toml
crates/kitty-script/src/: lib.rs  runtime.rs
crates/kitty-sdk/: Cargo.toml
crates/kitty-sdk/src/: lib.rs
crates/kitty-webapp/: Cargo.toml
crates/kitty-webapp/src/: app.rs  lib.rs
crates/kitty/src/: lib.rs
docs/: CRATES_IO_CHECKLIST.md  desktop-integration.md
