[package]
name = "kitty-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kitty-ai = { path = "../kitty-ai" }
kitty-3d = { path = "../kitty-3d" }
kitty-compat = { path = "../kitty-compat" }
kitty-render = { path = "../kitty-render" }
kitty-script = { path = "../kitty-script" }
kitty-webapp = { path = "../kitty-webapp" }
